--- a/ui/package.json
+++ b/ui/package.json
@@ -38,6 +38,7 @@
     "framer-motion": "^10.16.16",
     "jest-environment-jsdom": "^29.7.0",
     "js-cookie": "^3.0.5",
+    "mixpanel-browser": "^2.50.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -58,6 +59,7 @@
     "@testing-library/react": "^14.1.2",
     "@types/jest": "^29.5.12",
     "@types/js-cookie": "^3.0.6",
+    "@types/mixpanel-browser": "^2.49.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@types/toastr": "^2.1.43",
