refactor: using newer version of aks-set-context (#38)
* feat: auto-deploy main to staging

* feat: added workflow_dispatch to test deploying main

* chore: cleaning up for pull request

* fix: merged kubernetes context step into azure cli action step

* fix: added server to paths in push trigger

* chore: temp adding workflow_dispatch flag for testing

* fix: wrong character to start inlineScript

* feat: added azure login step for deploy main

* feat: allow id-token and contents permissions in workflow

* refactor: checking out helm-charts and use diff built-in tasks

* refactor: using newer version of aks-set-context

--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -5,6 +5,7 @@ on:
   workflow_dispatch:
   # Automatically run after either `frontend-docker-build (amd64)`
   # or `server-docker-build (amd64)` successfuly completes.
+  # SIDE EFFECT: It will run twice, if both builds were triggered.
   workflow_run:
     workflows: ["frontend-docker-build (amd64)", "server-docker-build (AMD)"]
     branches: ["main"]
@@ -36,12 +37,10 @@ jobs:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Gets K8s context
-        uses: azure/aks-set-context@94ccc775c1997a3fcfbfbce3c459fec87e0ab188
+        uses: azure/aks-set-context@v3
         with:
-            creds: ${{ secrets.AZURE_CREDENTIALS }}
             resource-group: ${{ vars.RESOURCE_GROUP }}
             cluster-name: ${{ vars.CLUSTER_NAME }}
-        id: login
 
       - uses: azure/setup-helm@v4.2.0
         with:
