refactor: using checkout v4 for helm-charts repo (#39)
* feat: auto-deploy main to staging

* feat: added workflow_dispatch to test deploying main

* chore: cleaning up for pull request

* fix: merged kubernetes context step into azure cli action step

* fix: added server to paths in push trigger

* chore: temp adding workflow_dispatch flag for testing

* fix: wrong character to start inlineScript

* feat: added azure login step for deploy main

* feat: allow id-token and contents permissions in workflow

* refactor: checking out helm-charts and use diff built-in tasks

* refactor: using newer version of aks-set-context

* refactor: using checkout v4 for helm-charts repo

--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -26,10 +26,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
-          name: https://github.com/Multiwoven/helm-charts.git
-          ref: refs/heads/main
+          name: multiwoven/helm-charts
 
       - name: Azure Login
         uses: Azure/login@v2.1.0
@@ -62,7 +61,7 @@ jobs:
           VITE_BRAND_HOVER_COLOR: ${{ vars.VITE_BRAND_HOVER_COLOR }}
           VITE_BRAND_NAME: ${{ vars.VITE_BRAND_NAME }}
           VITE_LOGO_URL: ${{ vars.VITE_LOGO_URL }}
-        working-directory: ./charts/multiwoven
+        working-directory: charts/multiwoven
         run: |
           helm upgrade -i multiwoven . \
             --set multiwovenConfig.apiHost=$API_HOST \
