bug: wrong input name, meant repository (#40)
* feat: auto-deploy main to staging

* feat: added workflow_dispatch to test deploying main

* chore: cleaning up for pull request

* fix: merged kubernetes context step into azure cli action step

* fix: added server to paths in push trigger

* chore: temp adding workflow_dispatch flag for testing

* fix: wrong character to start inlineScript

* feat: added azure login step for deploy main

* feat: allow id-token and contents permissions in workflow

* refactor: checking out helm-charts and use diff built-in tasks

* refactor: using newer version of aks-set-context

* refactor: using checkout v4 for helm-charts repo

* bug: wrong input name, meant repository

--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          name: multiwoven/helm-charts
+          repository: multiwoven/helm-charts
 
       - name: Azure Login
         uses: Azure/login@v2.1.0
