bug: double quotes for values containing spaces (#42)
* feat: auto-deploy main to staging

* feat: added workflow_dispatch to test deploying main

* chore: cleaning up for pull request

* fix: merged kubernetes context step into azure cli action step

* fix: added server to paths in push trigger

* chore: temp adding workflow_dispatch flag for testing

* fix: wrong character to start inlineScript

* feat: added azure login step for deploy main

* feat: allow id-token and contents permissions in workflow

* refactor: checking out helm-charts and use diff built-in tasks

* refactor: using newer version of aks-set-context

* refactor: using checkout v4 for helm-charts repo

* bug: wrong input name, meant repository

* bug: wrapping VITE_BRAND_NAME in double quotes

* bug: using double quotes for other values containing spaces

--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -77,8 +77,8 @@ jobs:
             --set multiwovenConfig.uiHost=$UI_HOST \
             --set multiwovenConfig.viteApiHost=$VITE_API_HOST \
             --set multiwovenConfig.viteBrandName="$VITE_BRAND_NAME" \
-            --set multiwovenConfig.BrandColor=$VITE_BRAND_COLOR \
-            --set multiwovenConfig.BrandHoverColor=$VITE_BRAND_HOVER_COLOR \
+            --set multiwovenConfig.BrandColor="$VITE_BRAND_COLOR" \
+            --set multiwovenConfig.BrandHoverColor="$VITE_BRAND_HOVER_COLOR" \
             --set multiwovenConfig.viteLogoUrl=$VITE_LOGO_URL \
             --set multiwovenPostgresql.enabled=false \
             --set multiwovenServer.multiwovenServer.image.repository=$IMAGE_NAME_SERVER \
