feat:  auto deploy to aks on merging pr to main (#43)
* feat: auto-deploy main to staging

* feat: added workflow_dispatch to test deploying main

* chore: cleaning up for pull request

* fix: merged kubernetes context step into azure cli action step

* fix: added server to paths in push trigger

* chore: temp adding workflow_dispatch flag for testing

* fix: wrong character to start inlineScript

* feat: added azure login step for deploy main

* feat: allow id-token and contents permissions in workflow

* refactor: checking out helm-charts and use diff built-in tasks

* refactor: using newer version of aks-set-context

* refactor: using checkout v4 for helm-charts repo

* bug: wrong input name, meant repository

* bug: wrapping VITE_BRAND_NAME in double quotes

* bug: using double quotes for other values containing spaces

* refactor: new staging env requires kubelogin

--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -35,11 +35,18 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
+      - name: Setup kubelogin
+        uses: azure/use-kubelogin@v1
+        with:
+          kubelogin-version: 'v0.1.3'
+
       - name: Gets K8s context
         uses: azure/aks-set-context@v3
         with:
             resource-group: ${{ vars.RESOURCE_GROUP }}
             cluster-name: ${{ vars.CLUSTER_NAME }}
+            admin: 'false'
+            use-kubelogin: 'true'
 
       - uses: azure/setup-helm@v4.2.0
         with:
