feature: set aks-set-context's admin flag to true (#48)

--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -50,7 +50,7 @@ jobs:
         with:
             resource-group: ${{ vars.RESOURCE_GROUP }}
             cluster-name: ${{ vars.CLUSTER_NAME }}
-            admin: 'false'
+            admin: 'true'
             use-kubelogin: 'true'
 
       - name: Deploy main to staging
