feat: Added Athena Connector (#83)

--- a/integrations/Gemfile
+++ b/integrations/Gemfile
@@ -41,7 +41,7 @@ gem "async-websocket", "~> 0.8.0"
 
 gem "git"
 
-gem "hubspot-api-client"
+gem "hubspot-api-client", "~> 17.2.0"
 
 gem "ruby-limiter"
 
@@ -50,6 +50,8 @@ gem "stripe"
 gem "net-sftp"
 
 gem "csv"
+
+gem "aws-sdk-athena"
 
 gem "rubyzip"
 
