[CE] feat: appsignal integration

--- a/server/.env.example
+++ b/server/.env.example
@@ -25,6 +25,7 @@ SMTP_PASSWORD=yourpassword
 # New Relic Configuration
 # -----------------------
 NEW_RELIC_KEY=yourkey
+APPSIGNAL_PUSH_API_KEY=yourkey
 
 
 # Connectors
