[CE] feat: integrate pundit for authorization

--- a/server/Gemfile
+++ b/server/Gemfile
@@ -36,6 +36,7 @@ gem "rack-cors"
 # AuthN & AuthZ
 gem "devise"
 gem "devise-jwt"
+gem "pundit"
 # Utilities
 gem "activerecord_json_validator", "~> 2.1.0"
 gem "bootsnap", require: false # Reduces boot time
