--- a/integrations/Gemfile
+++ b/integrations/Gemfile
@@ -55,6 +55,8 @@ gem "aws-sdk-athena"
 
 gem "rubyzip"
 
+gem "faraday"
+
 group :development, :test do
   gem "simplecov", require: false
   gem "simplecov_json_formatter", require: false
