[CE] feat: add meta data to integration errors and logs

--- a/integrations/.rubocop.yml
+++ b/integrations/.rubocop.yml
@@ -32,3 +32,12 @@ Metrics/MethodLength:
 
 Metrics/CyclomaticComplexity:
   Max: 50
+
+Metrics/BlockLength:
+  Enabled: false
+
+Metrics/ClassLength:
+  Enabled: false
+
+Metrics/AbcSize:
+  Enabled: false
