chore(CE): Add strong migration gem (#170)
* chore(CE): Add strong migration gem

* fix(CE): fix rubocop error

--- a/server/Gemfile
+++ b/server/Gemfile
@@ -46,6 +46,7 @@ gem "pg_query"
 gem "tzinfo-data", platforms: %i[windows jruby] # Timezone data
 # Third-Party Tools for Monitoring, Error Reporting, etc.
 gem "newrelic_rpm"
+gem "strong_migrations"
 gem "webrick"
 
 # Debugging
