feat(CE): Add amazon s3 source connector

--- a/.github/workflows/integrations-ci.yml
+++ b/.github/workflows/integrations-ci.yml
@@ -12,12 +12,24 @@ jobs:
     strategy:
       matrix:
         ruby-version: [3.2.0]
+
     steps:
       - uses: actions/checkout@v2
       - name: Set up Ruby ${{ matrix.ruby-version }}
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ matrix.ruby-version }}
+
+      - name: Update package list
+        run: sudo apt update
+
+      - name: Download and Extract DuckDB ODBC driver
+        run: |
+            wget -O duckdb.zip https://github.com/duckdb/duckdb/releases/download/v1.0.0/libduckdb-linux-amd64.zip
+            unzip duckdb.zip -d libduckdb
+            sudo mv libduckdb/duckdb.* /usr/local/include
+            sudo mv libduckdb/libduckdb.so /usr/local/lib
+            sudo ldconfig /usr/local/lib
 
       - name: Install dependencies
         run: |
