--- a/.github/workflows/integrations-main.yml
+++ b/.github/workflows/integrations-main.yml
@@ -28,6 +28,17 @@ jobs:
           ruby-version: ${{ matrix.ruby }}
           bundler-cache: true
 
+      - name: Update package list
+        run: sudo apt update
+
+      - name: Download and Extract DuckDB ODBC driver
+        run: |
+            wget -O duckdb.zip https://github.com/duckdb/duckdb/releases/download/v1.0.0/libduckdb-linux-amd64.zip
+            unzip duckdb.zip -d libduckdb
+            sudo mv libduckdb/duckdb.* /usr/local/include
+            sudo mv libduckdb/libduckdb.so /usr/local/lib
+            sudo ldconfig /usr/local/lib
+
       - name: Install dependencies
         run: bundle install
         working-directory: ./integrations
