--- a/server/Gemfile
+++ b/server/Gemfile
@@ -13,11 +13,12 @@ gem "interactor", "~> 3.0"
 
 gem "ruby-odbc", git: "https://github.com/Multiwoven/ruby-odbc.git"
 
-gem "multiwoven-integrations", "~> 0.2.0"
+gem "multiwoven-integrations", "~> 0.3.0"
 
 gem "temporal-ruby", github: "coinbase/temporal-ruby"
 
 gem "data_migrate"
+gem "mysql2"
 gem "parallel"
 gem "pg", "~> 1.1"       # PostgreSQL Database
 gem "puma", ">= 5.0"     # Web server
