--- a/.github/workflows/sync-ce-commits.yaml
+++ b/.github/workflows/sync-ce-commits.yaml
@@ -59,7 +59,7 @@ jobs:
             }
             git push --force --set-upstream origin $BRANCH_NAME
             PR_TITLE="${COMMIT_MESSAGE}"
-            PR_BODY="This PR cherry-picks the CE commit ${commit} from the Enterprise repository. Commit author: ${AUTHOR_NAME} (${AUTHOR_EMAIL})"
+            PR_BODY="This PR cherry-picks the CE commit ${sha} from the Enterprise repository. Commit author: ${AUTHOR_NAME} (${AUTHOR_EMAIL})"
             AUTHOR_GH_USERNAME=$(gh api graphql -f query='query { search(query: "${AUTHOR_EMAIL}", type: USER, first: 1) { nodes { ... on User { login } } } }' -q '.data.search.nodes[0].login')
             if [ -n "$AUTHOR_GH_USERNAME" ]; then
               PR_BODY="${PR_BODY}\n\ncc @${AUTHOR_GH_USERNAME}"
