feat(CE): source/mariadb

--- a/integrations/Gemfile
+++ b/integrations/Gemfile
@@ -63,6 +63,8 @@ gem "duckdb"
 
 gem "iterable-api-client"
 
+gem "mysql2"
+
 group :development, :test do
   gem "simplecov", require: false
   gem "simplecov_json_formatter", require: false
