--- a/server/Dockerfile.dev
+++ b/server/Dockerfile.dev
@@ -5,6 +5,20 @@
 ARG RUBY_VERSION=3.2.0
 FROM registry.docker.com/library/ruby:$RUBY_VERSION-slim as base
 
+# Install packages needed for building, including Libtool
+RUN apt-get update -qq && \
+    apt-get install --no-install-recommends -y build-essential autoconf automake libtool git libpq-dev libvips pkg-config m4 perl libltdl-dev curl git wget unzip default-libmysqlclient-dev
+
+COPY getduckdb.sh .
+# Make the script executable
+RUN chmod +x getduckdb.sh
+RUN ./getduckdb.sh
+
+RUN unzip duckdb.zip -d libduckdb
+RUN mv libduckdb/duckdb.* /usr/local/include
+RUN mv libduckdb/libduckdb.so /usr/local/lib
+RUN ldconfig /usr/local/lib
+
 
 WORKDIR /rails
 
