feat(CE): add oracle db destination connector (#323)

--- a/.github/workflows/integrations-ci.yml
+++ b/.github/workflows/integrations-ci.yml
@@ -31,6 +31,14 @@ jobs:
             sudo mv libduckdb/libduckdb.so /usr/local/lib
             sudo ldconfig /usr/local/lib
 
+      - name: Download and Install Oracle Instant Client
+        run: |
+          sudo apt-get install -y libaio1 alien
+          wget http://yum.oracle.com/repo/OracleLinux/OL7/oracle/instantclient/x86_64/getPackage/oracle-instantclient19.6-basic-19.6.0.0.0-1.x86_64.rpm
+          wget http://yum.oracle.com/repo/OracleLinux/OL7/oracle/instantclient/x86_64/getPackage/oracle-instantclient19.6-devel-19.6.0.0.0-1.x86_64.rpm
+          sudo alien -i --scripts oracle-instantclient*.rpm
+          rm -f oracle-instantclient*.rpm
+
       - name: Install dependencies
         run: |
           gem install bundler
