Resolve conflict in cherry-pick of 27c4c0e45853349f46179435d764cbd7942e44d1 and change the commit message

--- a/integrations/Gemfile
+++ b/integrations/Gemfile
@@ -67,7 +67,7 @@ gem "mysql2"
 
 gem "aws-sdk-sts"
 
-gem "ruby-oci8"
+gem "ruby-oci8", "~> 2.2.12"
 
 group :development, :test do
   gem "simplecov", require: false
