--- a/integrations/Gemfile
+++ b/integrations/Gemfile
@@ -75,6 +75,8 @@ gem "aws-sdk-sagemakerruntime"
 
 gem "google-cloud-ai_platform-v1"
 
+gem "tiny_tds"
+
 group :development, :test do
   gem "simplecov", require: false
   gem "simplecov_json_formatter", require: false
