refactor(CE): ui/ server.js , Dockerfile.dev

--- a/ui/Dockerfile.dev
+++ b/ui/Dockerfile.dev
@@ -5,7 +5,7 @@ FROM node:18-alpine
 WORKDIR /app
 
 # ENV Variable
-ENV VITE_API_HOST='https://api.multiwoven.com'
+ENV VITE_API_HOST='http://localhost:3000'
 
 # Copy package.json and package-lock.json (or yarn.lock if using Yarn)
 COPY package.json package-lock.json* ./
@@ -17,7 +17,7 @@ RUN npm ci
 COPY . .
 
 # ENV Variable
-ENV VITE_API_HOST='https://api.multiwoven.com'
+ENV VITE_API_HOST='http://localhost:3000'
 
 EXPOSE 8000
 
