--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,15 @@ RAILS_ENV=production
 # ----------------------
 UI_HOST=localhost:8000
 API_HOST=localhost:3000
-ALLOWED_HOST=localhost:8000
+
+# Allowed Host Configuration
+# ----------------------
+# Protects against DNS rebinding and host header attacks.
+# Specify the allowed hosts for your application.
+# Example: ALLOWED_HOST=yourdomain.com,anotherdomain.com
+# Note: localhost is allowed by default, so this setting is not needed for local development.
+# For more information: https://guides.rubyonrails.org/security.html#dns-rebinding-and-host-header-attacks
+# ALLOWED_HOST=localhost:8000
 
 VITE_API_HOST="http://localhost:3000"
 
@@ -19,6 +27,10 @@ REDIS_URL=redis://redis:6379/0
 
 # SMTP Configuration for Email
 # ----------------------------
+# This environment variable is used to skip user email verification after signup.
+# Set to false for local testing. When set to true, ensure SMTP credentials are
+# configured correctly so that verification emails can be sent to users.
+USER_EMAIL_VERFICATION=false
 SMTP_HOST=yourdomain.com
 SMTP_ADDRESS=smtp.yourdomain.com
 SMTP_PORT=587
