feat(CE): Added Mailchimp Destination Connector

--- a/integrations/Gemfile
+++ b/integrations/Gemfile
@@ -77,6 +77,8 @@ gem "google-cloud-ai_platform-v1"
 
 gem "tiny_tds"
 
+gem "MailchimpMarketing"
+
 group :development, :test do
   gem "simplecov", require: false
   gem "simplecov_json_formatter", require: false
