feat(CE): Fetch json_schema from model (#581)

--- a/server/app/models/schema_validations/models/configuration_aiml.json
+++ b/server/app/models/schema_validations/models/configuration_aiml.json
@@ -3,7 +3,7 @@
   "$schema": "http://json-schema.org/draft-04/schema#",
   "properties": {
     "harvesters": { "type": "array" },
-    "json_schema": { "type": "array" }
+    "json_schema": { "type": "object" }
   },
   "required": ["harvesters"]
 }
