fix(CE): removed reference to build_and_push job

--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -58,7 +58,7 @@ jobs:
   on_failure:
     environment: community
     if: ${{ failure() }}
-    needs: [ build_and_push, deploy ]
+    needs: [ deploy ]
     runs-on: ubuntu-latest
     steps:
       - name: Report error to AppSignal
