Resolve conflict in cherry-pick of b5402137eb8a16aca5163d108aa350b84cef5466 and change the commit message

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -98,6 +98,9 @@ RUN if [ "$TARGETARCH" = "amd64" ] || [ "$TARGETARCH" = "x86_64" ]; then \
 RUN apt-get update -qq && \
     apt-get install -y unzip 
 
+# Install libcurl4-openssl-dev
+RUN apt-get install -y libcurl4-openssl-dev
+
 RUN apt-get update -qq && \
     apt-get install -y libsasl2-modules-gssapi-mit
 
