--- a/server/config/storage.yml
+++ b/server/config/storage.yml
@@ -14,7 +14,7 @@ local:
 #   region: us-east-1
 #   bucket: your_own_bucket-<%= Rails.env %>
 
-# Remember not to checkin your GCS keyfile to a repository
+# Remember not to check in your GCS keyfile to a repository
 # google:
 #   service: GCS
 #   project: your_project
@@ -32,3 +32,9 @@ local:
 #   service: Mirror
 #   primary: local
 #   mirrors: [ amazon, google, microsoft ]
+
+microsoft:
+  service: AzureStorage
+  storage_account_name: <%= ENV.fetch('STORAGE_ACCOUNT_NAME', nil) %>
+  storage_access_key:  <%= ENV.fetch('STORAGE_ACCESS_KEY', nil) %>
+  container: <%= ENV.fetch("STORAGE_CONTAINER_NAME") { "custom-visual-component-files" } %>
